# OpenHumanoid

./: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.yml  how_to_run_docker_container.md  pyproject.toml  run.sh
FAST_LIO_LOCALIZATION_HUMANOID/: Dockerfile  bind_any.c  docker-compose.yml
FAST_LIO_LOCALIZATION_HUMANOID/.devcontainer/: Dockerfile  devcontainer.json
FAST_LIO_LOCALIZATION_HUMANOID/FAST_LIO/config/: mid360.yaml
FAST_LIO_LOCALIZATION_HUMANOID/FAST_LIO/rviz/: fastlio.rviz
FAST_LIO_LOCALIZATION_HUMANOID/data/: scans_2697.pcd
FAST_LIO_LOCALIZATION_HUMANOID/foundationpose/: Dockerfile  object_goal_sender.py
FAST_LIO_LOCALIZATION_HUMANOID/foundationpose/demo_data/: README.md
FAST_LIO_LOCALIZATION_HUMANOID/foundationpose/demo_data/can/: can.stl
FAST_LIO_LOCALIZATION_HUMANOID/livox_ros_driver2/config/: MID360_config.json
FAST_LIO_LOCALIZATION_HUMANOID/nav2_humanoid/: CMakeLists.txt  README.md  package.xml
FAST_LIO_LOCALIZATION_HUMANOID/nav2_humanoid/config/: nav2_default_view.rviz  nav2_params_g1.yaml
FAST_LIO_LOCALIZATION_HUMANOID/nav2_humanoid/launch/: detection_navigation_g1.launch.py  full_navigation_g1.launch.py  nav2_g1.launch.py
FAST_LIO_LOCALIZATION_HUMANOID/nav2_humanoid/scripts/: object_goal_sender
FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/: CMakeLists.txt  package.xml
FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/launch/: open3d_loc_g1.launch.py
FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/src/: global_localization.cpp
bridge/: bridge_server.py  mock_bridge.py  run_with_bridge.py
capabilities/: __init__.py  detectors.py  models.py  perception.py  server.py  state.py
docs/: README_future.md  architecture.md  capability_stack.md
open3d_loc/launch/: open3d_loc_g1.launch.py
openclaw/: openclaw.json  setup.sh  test-personality.sh
openclaw/workspace/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
openclaw/workspace/.openclaw/: workspace-state.json
openclaw/workspace/skills/manipulation-stack/: SKILL.md
openclaw/workspace/skills/navigation-stack/: SKILL.md
openclaw/workspace/skills/perception-stack/: SKILL.md
openclaw/workspace/skills/robot-control/: SKILL.md
realtime/: audio.py  client.py  main.py  tools.py
scripts/: detector_service.py  launch.sh  start_bridge.sh  start_capability_server.sh  start_detector_service.sh
